test/TestSuite/Scheduler/Correct/Optimize-4.tjp
project test "Test" "Test" 2000-01-01-0:00 +1m

macro Fixend [ minend ${1} maxend ${1} ]

# This example does not get optimized properly yet. 
resource tux1 "Tux1"
resource tux2 "Tux2"

task t1 "Task1" {
  start 2000-01-01
	${Fixend "2000-01-07-18:00"}
	effort 5d
	allocate tux1
}

task t2 "Task2" {
	start 2000-01-01
	${Fixend "2000-01-24-18:00"}
	effort 6d
	allocate tux1
}

task t3 "Task3" {
	depends !t1
	${Fixend "2000-01-14-18:00"}
	effort 10d
	allocate tux1, tux2
}

taskreport optimize4 "Optimize-4" {
  formats html
	columns name, start, end, criticalness, pathcriticalness, daily
	hideresource 0
}

